#364 Changing array list for list of